deployments/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mondaynightpoker-server
  labels:
    app: mondaynightpoker-server
spec:
  selector:
    matchLabels:
      app: mondaynightpoker-server
  template:
    metadata:
      labels:
        app: mondaynightpoker-server
    spec:
      imagePullSecrets:
        - name: github
      containers:
        - name: mondaynightpoker-server
          image: ghcr.io/weters/mondaynightpoker-server/mondaynightpoker-server:latest
          readinessProbe:
            httpGet:
              port: 5080
              path: /health
          livenessProbe:
            httpGet:
              port: 5080
              path: /health
          volumeMounts:
            - mountPath: /app/.keys
              name: keys
      volumes:
        - name: keys
          secret:
            secretName: mondaynightpoker-server-keys
