deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mondaynightpoker-server
  labels:
    app: mondaynightpoker-server
spec:
  selector:
    app: mondaynightpoker-server
  ports:
    - port: 5080
